Dancer 1.2002_01
    [ Joel Roth ]
    * Code fixes in documentation (Dancer::Session, Dancer::Introduction).

    [ Franck Cuny ]
    * Fix test failures on old machines with Test::More without done_testing.

Dancer 1.2002
    * Productionized! :)

Dancer 1.2001_01
    [ David Precious, Ivan Bessarabov ]
    * Fixing TT example config.

    [ Danijel Tasov ]
    * Default layout now validates.

Dancer 1.2001
    [ Sawyer X ]
    * Fix clash with KiokuDB because of Dancer::Serializer::Dumper.

    [ Franck Cuny ]
    * Refactoring engine triggers. This resolves an issue of engine inits being
      run before all configuration is read. That also crashes D::S::Cookie.
      As a side effect we now have a refactored _set_setting() which does not
      trigger any engine hooks (unlike setting()).
    * Fix failing test t/07_apphandlers/06_debug.t

    [ David Precious ]
    * Doc fixes. Clarifications to Cookbook's REST section.
    * Don't crash if application name is invalid and provide better information.

Dancer 1.2000
    ** 1.2 is a stable release of Dancer **
    ** We assure consistency and stability for this release and the following **
    ** 1.2xxx releases; you should not have issues updating to any 1.2xxx     **
    ** version because of it.                                                 **

    ++ A very special thanks goes to the Dancer community who improved and    ++
    ++ perfected this release and worked hard on reporting bugs, fixing them, ++
    ++ improving the stability, providing important features and everything   ++
    ++ else which makes Dancer so attractive - and above all: its community   ++
    ++ so thank you!                                                          ++

    [ Sawyer X ]
    * Fixing some more XML tests with missing preqreqs.

Dancer 1.1999_04 (RC4)
    [ Sawyer X ]
    * Load Plack::Loader dynamically in test.

    [ Yanick Champoux ]
    * Doc fix.

Dancer 1.1999_03 (RC3)
    [ Alexis Sukrieh ]